# 1brc

./: .gitignore  README.md  calculateAverage.py  calculateAverageDuckDB.py  calculateAveragePolars.py  calculateAveragePypy.py  calculateAveragePypyInputBuffer.py  compare.sh  createMeasurements.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_infrastructure_validation.py
